tree-sitter/test/corpus/extern_functions.txt
==================
extern function declaration
==================

extern fn read_line() Str = "ReadLine"

private extern fn _print(string: Str) Void = "Print"

---

(program
  (statement
    (external_function
      name: (identifier)
      parameters: (parameters)
      return: (type
        (primitive_type
          (str)))
      (assign)
      binding: (string
        chunk: (string_content))))
  (statement
    (external_function
      (private)
      name: (identifier)
      parameters: (parameters
        parameter: (param_def
          name: (identifier)
          type: (type
            (primitive_type
              (str)))))
      return: (type
        (primitive_type
          (void)))
      (assign)
      binding: (string
        chunk: (string_content)))))
