tree-sitter/test/corpus/functions.txt
==================
empty params
==================

private fn get_hello() Str {
  "Hello, world!"
}

get_hello()
---

(program
  (statement
    (function_definition
      (private)
      name: (identifier)
      parameters: (parameters)
      return: (type
        (primitive_type
          (str)))
      body: (block
        (statement
          (expression
            (primitive_value
              primitive: (string
                chunk: (string_content))))))))
  (statement
    (expression
      (function_call
        target: (identifier)
        arguments: (paren_arguments)))))

==================
one param with return
==================
fn greet(person: Str) Str {
  "Hello, {person}!"
}

greet("Alice")
greet(get_hello())

---

(program
  (statement
    (function_definition
      (identifier)
      (parameters
        (param_def
          (identifier)
          (type
            (primitive_type
              (str)))))
      (type
        (primitive_type
          (str)))
      (block
        (statement
          (expression
            (primitive_value
              (string
                (string_content)
                (string_interpolation
                  (expression
                    (identifier)))
                (string_content))))))))
  (statement
    (expression
      (function_call
        (identifier)
        (paren_arguments
          (expression
            (primitive_value
              (string
                (string_content))))))))
  (statement
    (expression
      (function_call
        (identifier)
        (paren_arguments
          (expression
            (function_call
              (identifier)
              (paren_arguments))))))))

==================
two params
==================

fn add(x: Int, y: Int) Int {
  x + y
}

add(1, 2)

---

(program
  (statement
    (function_definition
      (identifier)
      (parameters
        (param_def
          (identifier)
          (type
            (primitive_type
              (int))))
        (param_def
          (identifier)
          (type
            (primitive_type
              (int)))))
      (type
        (primitive_type
          (int)))
      (block
        (statement
          (expression
            (binary_expression
              (expression
                (identifier))
              (plus)
              (expression
                (identifier))))))))
  (statement
    (expression
      (function_call
        (identifier)
        (paren_arguments
          (expression
            (primitive_value
              (number)))
          (expression
            (primitive_value
              (number))))))))

==================
anonymous functions
==================
() {
  print("Hello, anon!")
}

(n: Int) Int {
  do_stuff()
  n + 1
}

list.map((n) { n + 1 })
---

(program
  (statement
    (expression
      (anonymous_function
        (block
          (statement
            (expression
              (function_call
                (identifier)
                (paren_arguments
                  (expression
                    (primitive_value
                      (string
                        (string_content))))))))))))
  (statement
    (expression
      (anonymous_function
        (anonymous_parameter
          (identifier)
          (type
            (primitive_type
              (int))))
        (type
          (primitive_type
            (int)))
        (block
          (statement
            (expression
              (function_call
                (identifier)
                (paren_arguments))))
          (statement
            (expression
              (binary_expression
                (expression
                  (identifier))
                (plus)
                (expression
                  (primitive_value
                    (number))))))))))
  (statement
    (expression
      (member_access
        (expression
          (identifier))
        (period)
        (function_call
          (identifier)
          (paren_arguments
            (expression
              (anonymous_function
                (anonymous_parameter
                  (identifier))
                (block
                  (statement
                    (expression
                      (binary_expression
                        (expression
                          (identifier))
                        (plus)
                        (expression
                          (primitive_value
                            (number)))))))))))))))

==================
Mutating semantics
==================

fn grow(mut t: Thing, size: Int) Int {
  t.size =+ size
  t.size
}

---

(program
  (statement
    (function_definition
      (identifier)
      (parameters
        (param_def
          (identifier)
          (type
            (identifier)))
        (param_def
          (identifier)
          (type
            (primitive_type
              (int)))))
      (type
        (primitive_type
          (int)))
      (block
        (statement
          (reassignment
            (member_access
              (expression
                (identifier))
              (period)
              (identifier))
            (increment)
            (expression
              (identifier))))
        (statement
          (expression
            (member_access
              (expression
                (identifier))
              (period)
              (identifier))))))))

==================
function signatures as types - simple
==================
fn map(list: [Int], do: fn(Int) Int) [Int] {
  list
}

map([1,2,3], fn(i: Int) Int { i*2 })

---

(program
  (statement
    (function_definition
      name: (identifier)
      parameters: (parameters
        parameter: (param_def
          name: (identifier)
          type: (type
            (list_type
              element_type: (type
                (primitive_type
                  (int))))))
        parameter: (param_def
          name: (identifier)
          type: (type
            (function_type
              (type
                (primitive_type
                  (int)))
              (type
                (primitive_type
                  (int)))))))
      return: (type
        (list_type
          element_type: (type
            (primitive_type
              (int)))))
      body: (block
        (statement
          (expression
            (identifier))))))
  (statement
    (expression
      (function_call
        target: (identifier)
        arguments: (paren_arguments
          argument: (expression
            (list_value
              (expression
                (primitive_value
                  primitive: (number)))
              (expression
                (primitive_value
                  primitive: (number)))
              (expression
                (primitive_value
                  primitive: (number)))))
          argument: (expression
            (anonymous_function
              parameter: (anonymous_parameter
                name: (identifier)
                type: (type
                  (primitive_type
                    (int))))
              return: (type
                (primitive_type
                  (int)))
              body: (block
                (statement
                  (expression
                    (binary_expression
                      left: (expression
                        (identifier))
                      operator: (multiply)
                      right: (expression
                        (primitive_value
                          primitive: (number))))))))))))))

==================
named arguments
==================

fn greet(name: Str, age: Int) Str {
  "Hello, {name}!"
}

greet(name: "Alice", age: 25)
greet(age: 30, name: "Bob")

---

(program
  (statement
    (function_definition
      name: (identifier)
      parameters: (parameters
        parameter: (param_def
          name: (identifier)
          type: (type
            (primitive_type
              (str))))
        parameter: (param_def
          name: (identifier)
          type: (type
            (primitive_type
              (int)))))
      return: (type
        (primitive_type
          (str)))
      body: (block
        (statement
          (expression
            (primitive_value
              primitive: (string
                chunk: (string_content)
                chunk: (string_interpolation
                  expression: (expression
                    (identifier)))
                chunk: (string_content))))))))
  (statement
    (expression
      (function_call
        target: (identifier)
        arguments: (paren_arguments
          argument: (named_argument
            name: (identifier)
            value: (expression
              (primitive_value
                primitive: (string
                  chunk: (string_content)))))
          argument: (named_argument
            name: (identifier)
            value: (expression
              (primitive_value
                primitive: (number))))))))
  (statement
    (expression
      (function_call
        target: (identifier)
        arguments: (paren_arguments
          argument: (named_argument
            name: (identifier)
            value: (expression
              (primitive_value
                primitive: (number))))
          argument: (named_argument
            name: (identifier)
            value: (expression
              (primitive_value
                primitive: (string
                  chunk: (string_content))))))))))
