tree-sitter/test/corpus/iteration.txt
==================
iteration
==================

for i in 1..10 {
	io::print(i.to_str())
}

for i in 1..(something - other) {
	io::print(i.to_str())
}
---

(program
  (statement
    (for_in_loop
      items: (for_in_items
        (identifier))
      range: (expression
        (range_expression
          left: (expression
            (primitive_value
              primitive: (number)))
          operator: (inclusive_range)
          right: (expression
            (primitive_value
              primitive: (number)))))
      body: (block
        (statement
          (expression
            (member_access
              target: (expression
                (identifier))
              operator: (double_colon)
              member: (function_call
                target: (identifier)
                arguments: (paren_arguments
                  argument: (expression
                    (member_access
                      target: (expression
                        (identifier))
                      operator: (period)
                      member: (function_call
                        target: (identifier)
                        arguments: (paren_arguments))))))))))))
  (statement
    (for_in_loop
      items: (for_in_items
        (identifier))
      range: (expression
        (range_expression
          left: (expression
            (primitive_value
              primitive: (number)))
          operator: (inclusive_range)
          right: (expression
            (paren_expression
              expr: (expression
                (binary_expression
                  left: (expression
                    (identifier))
                  operator: (minus)
                  right: (expression
                    (identifier))))))))
      body: (block
        (statement
          (expression
            (member_access
              target: (expression
                (identifier))
              operator: (double_colon)
              member: (function_call
                target: (identifier)
                arguments: (paren_arguments
                  argument: (expression
                    (member_access
                      target: (expression
                        (identifier))
                      operator: (period)
                      member: (function_call
                        target: (identifier)
                        arguments: (paren_arguments)))))))))))))
