tree-sitter/test/corpus/loops.txt
==================
While Loop
==================

while count <= 9 {
	count =+ 1
}

while is_true or count > 0 {
	count =- 1
}

---

(program
  (statement
    (while_loop
      condition: (expression
        (binary_expression
          left: (expression
            (identifier))
          operator: (less_than_or_equal)
          right: (expression
            (primitive_value
              primitive: (number)))))
      body: (block
        (statement
          (reassignment
            target: (identifier)
            operator: (increment)
            value: (expression
              (primitive_value
                primitive: (number))))))))
  (statement
    (while_loop
      condition: (expression
        (binary_expression
          left: (expression
            (identifier))
          operator: (or)
          right: (expression
            (binary_expression
              left: (expression
                (identifier))
              operator: (greater_than)
              right: (expression
                (primitive_value
                  primitive: (number)))))))
      body: (block
        (statement
          (reassignment
            target: (identifier)
            operator: (decrement)
            value: (expression
              (primitive_value
                primitive: (number)))))))))

==================
For Loop
==================

for mut count = 0; count <= 9; count = count + 1 {
  foobar
}

---

(program
  (statement
    (for_loop
      (variable_definition
        (variable_binding)
        (identifier)
        (assign)
        (expression
          (primitive_value
            (number))))
      (expression
        (binary_expression
          (expression
            (identifier))
          (less_than_or_equal)
          (expression
            (primitive_value
              (number)))))
      (statement
        (reassignment
          (identifier)
          (assign)
          (expression
            (binary_expression
              (expression
                (identifier))
              (plus)
              (expression
                (primitive_value
                  (number)))))))
      (block
        (statement
          (expression
            (identifier)))))))

==================
For In Loop
==================

for item in items {
	foo_bar(item)
}

for cell in (b.cells) {}

---

(program
  (statement
    (for_in_loop
      items: (for_in_items
        (identifier))
      range: (expression
        (identifier))
      body: (block
        (statement
          (expression
            (function_call
              target: (identifier)
              arguments: (paren_arguments
                argument: (expression
                  (identifier)))))))))
  (statement
    (for_in_loop
      items: (for_in_items
        (identifier))
      range: (expression
        (paren_expression
          expr: (expression
            (member_access
              target: (expression
                (identifier))
              operator: (period)
              member: (identifier)))))
      body: (block))))
